[package]
name = "aoc2023"
authors = [ "Jarl Evanson <evanson.jarl@gmail.com" ]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JarlEvanson/advent_of_code.git"
version = "0.1.0"

[dependencies]
utils = { path = "../common/rust/utils" }

[profile.release]
overflow-checks = true
